# KaminoGPU

./: .gitignore  KaminoGPU.sln  README.md
KaminoGPU/: CMakeLists.txt  KaminoGPU.vcxproj  KaminoGPU.vcxproj.filters  main.cpp
KaminoGPU/cuda_util_headers/: helper_cuda_drvapi.h
KaminoGPU/include/: CubicSolver.h  KaminoGPU.cuh  KaminoGPU.h  KaminoHeader.cuh  KaminoHeader.h  KaminoParticles.cuh  KaminoParticles.h  KaminoQuantity.cuh  KaminoQuantity.h  KaminoSolver.cuh  KaminoSolver.h  KaminoTimer.cuh  aVector.h  vectorUtil.cuh  vectorUtil.h
KaminoGPU/kernel/: KaminoAdvection.cu  KaminoCore.cu  KaminoGPU.cu  KaminoGeometric.cu  KaminoInitializer.cu  KaminoParticles.cu  KaminoProjection.cu  KaminoQuantity.cu  KaminoSolver.cu  KaminoTimer.cu  advection.cu  main.cu  simpleCUFFT.cu  tdm.cu  vectorUtil.cu
KaminoGPU/lib/: opencv_core2413d.lib  opencv_highgui2413d.lib  opencv_imgproc2413d.lib  zlibstatic.lib  zlibstaticd.lib
KaminoGPU/partio_headers/: Partio.h
KaminoGPU/src/: CubicSolver.cpp  Kamino.cpp  KaminoAdvection.cpp  KaminoFFT.cpp  KaminoGeometry.cpp  KaminoInit.cpp  KaminoParticles.cpp  KaminoProjection.cpp  KaminoQuantity.cpp  KaminoSolver.cpp  aVector.cpp  vectorUtil.cpp
